Add lots of changes

--- a/about.html
+++ b/about.html
@@ -166,11 +166,11 @@
     <div class="gallery_area">
         <div class="single_gallery big_img">
             <div class="hover_pop">
-                    <a class="popup-image" href="img/gallery/1.png">
+                    <a class="popup-image" href="images/IMG_1163.jpeg">
                         <i class="ti-plus"></i>
                     </a>
             </div>
-            <img src="img/gallery/1.png" alt="">
+            <img src="images/IMG_1163.jpeg" alt="">
         </div>
         <div class="single_gallery big_img">
                 <div class="hover_pop">
